<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WarOnline</string>
	
    <string-array name="main_menu_arr">
        <item>Pass-and-Play</item>
        <item>Play Online</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
	
	<string-array name="game_menu_arr">
        <item>Menu</item>
		<item>End turn</item>
		<item>Aviation</item>
		<item>Map</item>
		<item>Hand over</item>
		<item>Quit</item>
	</string-array>

    <string name="edit_map">Edit map</string>
    <string name="input_map_name">Input map name:</string>
    <string name="input_map_size">Input map size (tiles):</string>
    <string name="edit_map_not_valid">Name must be not empty, width (10&#8230;1000), height (10&#8230;1000)!</string>
    <string name="delete_map_question">Delete map\u0020</string>
    <string name="delete_map_complete">Delete success!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="tile_inf">Create tile map</string>
    <string name="base1_inf">Position gamer 1</string>
    <string name="base2_inf">Position gamer 2</string>
    <string name="base3_inf">Position gamer 3</string>
    <string name="units_inf">Position free units</string>
    <string name="base">Base</string>
    <string name="exit_prompt">Double press for exit</string>
    <string name="select_units">Select units</string>
    <string name="save_map_prompt">Save map and exit?</string>
    <string name="no_base_selected">Select base coordinates before!</string>
    <string name="map_saved">Map saved</string>
    <string name="select_map">Select map</string>
	<string name="two_players">2 Players</string>
	<string name="three_players">3 Players</string>
	<string name="maps_not_found">Maps not found</string>
	<string name="max_units_limit">In all units max count is 9!</string>
	<string name="fullscreen">Fullscreen</string>
	<string name="gamer_go_dialog">Go player</string>
	<string name="sound_effects">Sound effects</string>
	
	<string name="info">
        <b>Общее</b>\n
        <p>Игра WarOnline создана для конкурса на http://annimon.com \n
            В игре предусмотрен режим передай-и-играй, а также игра по Интернет.
            Колличество игроков 2 или 3.</p>\n\n
        <b>Игра</b>\n
        <p>Сначала ыбираете колличество единиц техники (лимитировано) и карту.
            Играть нужно не показывая игровое поле сопернику. В начале вы появляетесь на карте и вам виден соперник только в местах, где прошла ваша техника.
            У каждой единицы свои особенности, которые вы должны понять в процессе игры.
            Инжинерная машина умеет ставить и убирать мины. Сопернику не видны ваши мины, пока он
            не проедет своей машиной вблизи от них. Урон наносится больше при стрельбе в бок или сзади.
            Двойным нажатием по юниту можно посмотреть его состояние.
			Нажимая в произвольном месте карты можно поворачивать юнитов.</p>\n\n
        <b>Редактор карт</b>\n
        <p>Вы можете создавать свои карты в настройках. Чтобы удалить карту -- длинное нажатие по ней в списке.
            Создание состоит из нескольких этапов. Сначала делаете тайловую карту. Потом последовательно выбираете расположение баз противников (3 шт., могут использоваться только 2 первые при игре вдвоем).
            Обратите внимание, что базы не могут перекрывать друг друга или располагаться на воде, камнях и т.п.
            Последний этап (можно пропустить) -- выбираете расположение свободных юнитов, которых игроки смогут
            захвачивать во время игры.</p>\n\n
        <b>NaikSoftware (c), 2013-2014г.\n
            Запрещено использовать графику из игры в других проектах без разрешения автора</b>
    </string>
</resources>
