<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center">

    <Button
        android:onClick="editLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_map" />


	<LinearLayout
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/fullscreen" />
		<CheckBox
			android:id="@+id/checkBoxFullscreen"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sound_effects" />
		<CheckBox
			android:id="@+id/checkBoxSoundEffects"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

</LinearLayout>
